tests/ui/use_after_move.ina
// COMPILE_FAIL

type Test = {}

fn main() {
    let a = Test {};
    let b = a;
    let c = a;
}

